@@ -45,13 +45,6 @@ class HarvestMigration extends MigrateDKAN {
   protected $dkanHarvestMigrateSQLMapSourceOptions;
 
   /**
-   * Store the dataset ids processed to unpublish missing sources later.
-   *
-   * @var array
-   */
-  protected $idListImported = array();
-
-  /**
    * Extra Harvest argument.
    *
    * @var bool
@@ -158,8 +151,7 @@ class HarvestMigration extends MigrateDKAN {
     parent::preImport();
 
     // Skip hash checking if required.
-    if (isset($this->arguments['dkan_harvest_skip_hash']) && $this->arguments['dkan_harvest_skip_hash']) {
-      // TODO add support for overridding the hash mecanisme.
+    if (isset($this->arguments['skiphash']) && $this->arguments['skiphash']) {
       $this->dkanHarvestOptSkipHash = TRUE;
       $this->map->getConnection()->update($this->map->getMapTable())
         ->fields(array('hash' => NULL))
@@ -227,7 +219,6 @@ class HarvestMigration extends MigrateDKAN {
    */
   public function prepareRow($row) {
     parent::prepareRow($row);
-    $this->idListImported[] = $row->dkan_harvest_object_id;
   }
 
   /**
@@ -237,6 +228,8 @@ class HarvestMigration extends MigrateDKAN {
    * Add common DkanHarvest prepare steps.
    */
   public function prepare($dataset_prepare, $row) {
+    migrate_instrument_start('HarvestMigration->prepare');
+
     // XXX copied from pod migration.
     if (isset($row->modified) && $row->modified != '') {
       $dataset_prepare->migration_changed_date = $row->modified;
@@ -247,13 +240,15 @@ class HarvestMigration extends MigrateDKAN {
     if (module_exists('dkan_dataset_metadata_source')) {
       $this->prepareMetadataSource($dataset_prepare, $row);
     }
+
+    migrate_instrument_stop('HarvestMigration->prepare');
   }
 
   /**
    * {@inheritdoc}
    */
   public function complete($dataset, $row) {
-
+    migrate_instrument_start('HarvestMigration->complete');
     // Create resources after the dataset was created.
     // If the creation of the dataset fails resources should not
     // be created. Also, we need the dataset to be created first
@@ -265,6 +260,8 @@ class HarvestMigration extends MigrateDKAN {
 
     // Save dataset.
     node_save($dataset);
+
+    migrate_instrument_stop('HarvestMigration->complete');
   }
 
   /**
@@ -535,6 +532,8 @@ class HarvestMigration extends MigrateDKAN {
   public function postImport() {
     parent::postImport();
 
+    migrate_instrument_start('HarvestMigration->postImport');
+
     // Check if sourceCount is 0.
     // Show and add an error to the message table.
     if ($this->sourceCount() == 0) {
@@ -548,7 +547,7 @@ class HarvestMigration extends MigrateDKAN {
     // current harvest they are missing from the source as well.
     // Look for those zombie dataset and clean them.
     $zombies = $this->map->lookupMapTable(HarvestMigrateSQLMap::STATUS_FAILED,
-      $this->idListImported, "NOT IN", NULL, NULL);
+      $this->getIdList(), "NOT IN", NULL, NULL);
 
     if (!empty($zombies)) {
       $zombies_sourceids = array();
@@ -607,6 +606,8 @@ class HarvestMigration extends MigrateDKAN {
         ));
       self::displayMessage($message, 'notice');
     }
+
+    migrate_instrument_stop('HarvestMigration->postImport');
   }
 
   /**
@@ -616,22 +617,21 @@ class HarvestMigration extends MigrateDKAN {
    * migrate operation but had the source restored.
    */
   private function postImportRestoredSource() {
+    migrate_instrument_start('HarvestMigration->postImportRestoredSource');
     // Remove HarvestMigrateSQLMap::STATUS_IGNORED_NO_SOURCE flag and publish
     // the datasets (and their related content) that had their source disappear
     // in a previous harvest migrate.
     // Get rows marked with HarvestMigrateSQLMap::STATUS_IGNORED_NO_SOURCE
     // and part of the imported datasets imported.
-    if (is_array($this->idListImported) && !empty($this->idListImported)) {
-      migrate_instrument_start('postImportRestoredSource-SELECTNOSOURCEPROCESSED');
+    if (is_array($this->getIdList()) && !empty($this->getIdList())) {
       $query = $this->map->getConnection()->select($this->map->getMapTable(), 'map')
         ->fields('map')
         ->condition("needs_update", HarvestMigrateSQLMap::STATUS_IGNORED_NO_SOURCE)
         // This will throw an exception if $this->idListImported is empty. We
         // are doing that check before entring this code but if you are
         // refactoring this code make sure to add the relevent checks.
-        ->condition('sourceid1', $this->idListImported, 'IN');
+        ->condition('sourceid1', $this->getIdList(), 'IN');
       $result = $query->execute();
-      migrate_instrument_stop('postImportRestoredSource-SELECTNOSOURCEPROCESSED');
 
       $rowRestoredSourceList = $result->fetchAllAssoc('destid1');
       if (!empty($rowRestoredSourceList)) {
@@ -667,12 +667,10 @@ class HarvestMigration extends MigrateDKAN {
           $dataset_emw->save();
 
           // Update the map table.
-          migrate_instrument_start('postImportRestoredSource-UPDATEPROCESSED');
           $results = $this->map->getConnection()->update($this->map->getMapTable())
             ->fields(array('needs_update' => MigrateMap::STATUS_IMPORTED))
             ->condition('destid1', $dataset_nid)
             ->execute();
-          migrate_instrument_stop('postImportRestoredSource-UPDATEPROCESSED');
 
           $message = t(
             'Dataset "@dataset_title"[@nid] and @related_count related content (Resources, ..) published.',
@@ -686,6 +684,7 @@ class HarvestMigration extends MigrateDKAN {
         }
       }
     }
+    migrate_instrument_stop('HarvestMigration->postImportRestoredSource');
   }
 
   /**
@@ -695,19 +694,18 @@ class HarvestMigration extends MigrateDKAN {
    * but were not processed in this run because the source is not available.
    */
   private function postImportMissingSource() {
+    migrate_instrument_start('HarvestMigration->postImportMissingSource');
     // Get rows NOT marked with HarvestMigrateSQLMap::STATUS_IGNORED_NO_SOURCE
     // and NOT part of the imported datasets imported.
-    migrate_instrument_start('postImportMissingSource-GetNotProcessed');
     $query = $this->map->getConnection()->select($this->map->getMapTable(), 'map')
       ->fields('map')
       ->condition("needs_update", HarvestMigrateSQLMap::STATUS_IGNORED_NO_SOURCE, '<>');
-    if (is_array($this->idListImported) && !empty($this->idListImported)) {
+    if (is_array($this->getIdList()) && !empty($this->getIdList())) {
       foreach ($this->map->getSourceKeyMap() as $key_name) {
-        $query = $query->condition("map.$key_name", $this->idListImported, 'NOT IN');
+        $query = $query->condition("map.$key_name", $this->getIdList(), 'NOT IN');
       }
     }
     $result = $query->execute();
-    migrate_instrument_stop('postImportMissingSource-GetNotProcessed');
 
     $rowNoSourceList = $result->fetchAllAssoc('destid1');
     if (!empty($rowNoSourceList)) {
@@ -751,12 +749,10 @@ class HarvestMigration extends MigrateDKAN {
         $dataset_emw->save();
 
         // Update the map table.
-        migrate_instrument_start('postImportMissingSource-UpdateNoSource');
         $results = $this->map->getConnection()->update($this->map->getMapTable())
           ->fields(array('needs_update' => HarvestMigrateSQLMap::STATUS_IGNORED_NO_SOURCE))
           ->condition('destid1', $nid)
           ->execute();
-        migrate_instrument_stop('postImportMissingSource-UpdateNoSource');
 
         $message = t(
           'Dataset "@dataset_title"[@nid] and @related_count related content (Resources, ..) unpublished.',
@@ -769,6 +765,7 @@ class HarvestMigration extends MigrateDKAN {
         self::displayMessage($message, 'warning');
       }
     }
+    migrate_instrument_stop('HarvestMigration->postImportMissingSource');
   }
 
   /**
@@ -1193,6 +1190,13 @@ class HarvestMigration extends MigrateDKAN {
     return $this->logID;
   }
 
+  /**
+   * Return list of source items ids.
+   */
+  public function getIdList() {
+    return $this->source->getIdList();
+  }
+
 }
 
 /**
@@ -1210,7 +1214,7 @@ class XMLHarvestMigration extends HarvestMigration {
     $this->itemUrl = drupal_realpath($this->dkanHarvestSource->getCacheDir()) .
       '/:id.xml';
 
-    $this->source = new MigrateSourceList(
+    $this->source = new HarvestMigrateSourceList(
       new HarvestList($this->dkanHarvestSource->getCacheDir()),
       new MigrateItemXML($this->itemUrl),
       array(),
